--- a/cas-server-support-jdbc/build.gradle
+++ b/cas-server-support-jdbc/build.gradle
@@ -5,7 +5,9 @@ dependencies {
     compile libraries.spring
     compile libraries.quartz
     compile libraries.hibernate    
-    runtime libraries.javaximpl 
+    runtime libraries.javaximpl
+    runtime project(":cas-server-support-jdbc-drivers")
+    
     testCompile libraries.tests
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
     
