--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -89,7 +89,7 @@ spring.aop.proxy-target-class=true
 ##
 # CAS Authentication Credentials
 #
-# cas.authn.accept.users=casuser::Mellon
+cas.authn.accept.users=casuser::Mellon
 
 ##
 # CAS Authentication Attributes
