--- a/gradle.properties
+++ b/gradle.properties
@@ -105,6 +105,8 @@ jcacheVersion=1.0.1
 
 hsqlVersion=2.3.4
 hikariVersion=2.4.6
+postgresqlVersion=9.4.1208.jre7
+mysqlVersion=6.0.3
 
 shiroVersion=1.2.5
 jose4jVersion=0.5.0
