--- a/cas-server-support-jdbc-monitor/build.gradle
+++ b/cas-server-support-jdbc-monitor/build.gradle
@@ -6,7 +6,9 @@ dependencies {
     compile libraries.spring
     compile libraries.quartz
     compile libraries.hibernate    
-    runtime libraries.javaximpl 
+    runtime libraries.javaximpl
+    runtime project(":cas-server-support-jdbc-drivers")
+    
     testCompile libraries.tests
     testCompile project(":cas-server-core-authentication")
     testCompile project(":cas-server-core-util")
