--- a/cas-server-support-jpa-util/build.gradle
+++ b/cas-server-support-jpa-util/build.gradle
@@ -1,8 +1,8 @@
-
 description = "Apereo CAS JPA Ticket Registry Support"
 dependencies {
-  
-  compile project(":cas-server-core-util")
-  compile libraries.hibernate
-  
+
+    compile project(":cas-server-core-util")
+    compile libraries.hibernate
+    runtime project(":cas-server-support-jdbc-drivers")
+
 }
