--- a/cas-server-support-throttle-jdbc/build.gradle
+++ b/cas-server-support-throttle-jdbc/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile project(":cas-server-support-audit-jdbc")
     compile project(":cas-server-core-audit")
     compile project(":cas-server-support-throttle")
+    runtime project(":cas-server-support-jdbc-drivers")
     testCompile project(path: ":cas-server-support-throttle", configuration: "tests")
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
     testCompile project(path: ":cas-server-core")
