--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ findbugsContribVersion=6.6.1
 findbugsSecVersion=1.4.6
 checkstyleVersion=6.19
 
-javaxSevletVersion=3.1.0
+javaxServletVersion=3.1.0
 javaxElVersion=3.0.0
 javaxElImplVersion=2.2.6
 javaxValidationVersion=1.1.0.Final
