Clean up mongodb service registry iml By using a client uri rather than user credentials.

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ findbugsContribVersion=6.2.3
 findbugsSecVersion=1.4.3
 checkstyleVersion=6.13
 
-javaxSevletVersion=3.1.0
+javaxServletVersion=3.1.0
 javaxElVersion=3.0.0
 javaxElImplVersion=2.2.6
 javaxValidationVersion=1.1.0.Final
