--- a/build.gradle
+++ b/build.gradle
@@ -195,7 +195,7 @@ subprojects {
             exclude(group: 'org.hamcrest', module: 'hamcrest-core')
         }
         testCompile group: 'org.springframework', name: 'spring-test', version: springVersion
-        provided group: 'javax.servlet', name: 'javax.servlet-api', version: javaxSevletVersion
+        provided group: 'javax.servlet', name: 'javax.servlet-api', version: javaxServletVersion
         provided group: 'javax.el', name: 'javax.el-api', version: javaxElVersion
     }
 
