--- a/cas-server-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/cas-server-webapp/src/main/webapp/WEB-INF/web.xml
@@ -241,7 +241,10 @@
         <servlet-name>cas</servlet-name>
         <url-pattern>/v1/*</url-pattern>
     </servlet-mapping>
-
+    <servlet-mapping>
+        <servlet-name>cas</servlet-name>
+        <url-pattern>/oauth2.0/*</url-pattern>
+    </servlet-mapping>
     <session-config>
         <!-- Default to 5 minute session timeouts -->
         <session-timeout>5</session-timeout>
