Allow handlers to receive their own password encoder

--- a/cas-server-core-configuration/build.gradle
+++ b/cas-server-core-configuration/build.gradle
@@ -3,5 +3,6 @@ dependencies {
     compile libraries.springboot
     compile libraries.spring
     compile libraries.hibernate
+    compile libraries.springsecurity
     compile libraries.persondirectory
 }
