--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include "cas-server-core-events"
 include "cas-server-core-audit"
 include "cas-server-core"
 include "cas-server-documentation"
+include "cas-server-support-bom"
 include "cas-server-support-jdbc-drivers"
 include "cas-server-support-audit-jdbc"
 include "cas-server-support-events-mongo"
