--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,22 @@
+projectUrl=http://www.apereo.org/cas
+projectInceptionYear=2004
+
+projectScmUrl=scm:git@github.com:apereo/cas.git
+
+projectLicenseName=The Apache Software License, Version 2.0
+projectLicenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
+projectLicenseDistribution=repo
+
+projectIssueSystem=Github
+projectIssueUrl=https://github.com/apereo/cas/issues
+
 gradleVersion=2.14
-aspectjVersion=1.8.9
 sourceCompatibility=1.8
 targetCompatibility=1.8
 group=org.apereo.cas
 version=5.0.0.M3-SNAPSHOT
 
+aspectjVersion=1.8.9
 junitVersion=4.12
 mockitoVersion=1.10.19
 findbugsVersion=3.0.1
