--- a/gradle.properties
+++ b/gradle.properties
@@ -65,8 +65,8 @@ reflectionsVersion=0.9.10
 guavaVersion=19.0
 groovyVersion=2.4.6
 
-springWebmvcPac4jVersion=1.0.2
-pac4jVersion=1.9.0-SNAPSHOT
+springWebmvcPac4jVersion=1.1.0
+pac4jVersion=1.9.0
 dropwizardMetricsVersion=3.1.2
 dropwizardMetricsSpringVersion=3.1.3
 jacksonDatabindVersion=2.7.4
