--- a/cas-server-support-digest-authentication/build.gradle
+++ b/cas-server-support-digest-authentication/build.gradle
@@ -1,9 +1,12 @@
 description = 'Apereo CAS Digest Authentication Support'
 dependencies {
-    compile project(':cas-server-core-authentication')
-    compile project(':cas-server-core-api')
-    compile project(':cas-server-core-webflow')
-    compile project(':cas-server-core-web')
+    compile project(":cas-server-core-authentication")
+    compile project(":cas-server-core-api")
+    compile project(":cas-server-core-webflow")
+    compile project(":cas-server-core-web")
     compile libraries.pac4j
+    compile libraries.spring
+    compile libraries.springboot
+    compile libraries.springcloud
 }
 
