Provide a CAS BOM (#1876)
* added support for a BOM

* added support for a BOM

* Updated docs

* Fixed typo in the docs

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,22 @@
-gradleVersion=2.13
-aspectjVersion=1.8.9
+projectUrl=http://www.apereo.org/cas
+projectInceptionYear=2004
+
+projectScmUrl=scm:git@github.com:apereo/cas.git
+
+projectLicenseName=The Apache Software License, Version 2.0
+projectLicenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
+projectLicenseDistribution=repo
+
+projectIssueSystem=Github
+projectIssueUrl=https://github.com/apereo/cas/issues
+
+gradleVersion=2.14
 sourceCompatibility=1.8
 targetCompatibility=1.8
 group=org.apereo.cas
 version=5.0.0.M3-SNAPSHOT
 
+aspectjVersion=1.8.9
 junitVersion=4.12
 mockitoVersion=1.10.19
 findbugsVersion=3.0.1
@@ -24,7 +36,7 @@ log4jVersion=2.6.1
 disruptorVersion=3.3.4
 inspektrVersion=1.5.GA
 
-springVersion=4.3.0.RELEASE
+springVersion=4.3.1.RELEASE
 springIntegrationVersion=4.2.8.RELEASE
 springWebflowClientVersion=1.0.3
 springWebflowVersion=2.4.2.RELEASE
