--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -101,7 +101,15 @@ ext.libraries = [
                     exclude(group: "org.javassist", module: "javassist")
                     force = true
                 },
-                dependencies.create("org.javassist:javassist:$javassistVersion")
+                dependencies.create("org.javassist:javassist:$javassistVersion"),
+                dependencies.create("org.springmodules:spring-modules-cache:0.8") {
+                    exclude(group: "commons-logging", module: "commons-logging")
+                    exclude(group: "ant", module: "ant")
+                    exclude(group: "commons-lang", module: "commons-lang")
+                    exclude(group: "xpp3", module: "xpp3_min")
+                    exclude(group: "commons-collections", module: "commons-collections")
+                    force = true
+                }
         ],
         hazelcast               : dependencies.create("com.hazelcast:hazelcast:$hazelcastVersion"),
         hibernate               : [
