--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -107,7 +107,27 @@ ext.libraries = [
                     exclude(group: "ant", module: "ant")
                     exclude(group: "commons-lang", module: "commons-lang")
                     exclude(group: "xpp3", module: "xpp3_min")
+                    exclude(group: "jcs", module: "jcs")
+                    exclude(group: "jboss", module: "jboss-system")
+                    exclude(group: "jboss", module: "javassist")
+                    exclude(group: "jboss", module: "jboss-cache")
+                    exclude(group: "jboss", module: "jboss-jmx")
+                    exclude(group: "jboss", module: "jboss-minimal")
+                    exclude(group: "jboss", module: "jboss-common")
+                    exclude(group: "jgroups", module: "jgroups-all")
+                    exclude(group: "log4j", module: "log4j")
+                    exclude(group: "xjavadoc", module: "xjavadoc")
+                    exclude(group: "jini", module: "xjavadoc")
+                    exclude(group: "jini", module: "jsk-platform")
+                    exclude(group: "jini", module: "boot")
+                    exclude(group: "jini", module: "jsk-lib")
+                    exclude(group: "jini", module: "mahalo")
+                    exclude(group: "jini", module: "reggie")
+                    exclude(group: "jini", module: "start")
+                    exclude(group: "jini", module: "webster")
+                    exclude(group: "gigaspaces", module: "gigaspaces-ce")
                     exclude(group: "commons-collections", module: "commons-collections")
+                    exclude(group: "org.springframework", module: "spring")
                     force = true
                 }
         ],
