--- a/cas-server-core/src/test/resources/application.properties
+++ b/cas-server-core/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-cas.authn.attributes.uid=uid
-cas.authn.attributes.eduPersonAffiliation=developer
-cas.authn.attributes.groupMembership=adopters
+cas.authn.attributeRepository.attributes.uid=uid
+cas.authn.attributeRepository.attributes.eduPersonAffiliation=developer
+cas.authn.attributeRepository.attributes.groupMembership=adopters
 
 cas.authn.policy.any.tryAll=true
