--- a/cas-server-core-configuration/build.gradle
+++ b/cas-server-core-configuration/build.gradle
@@ -6,4 +6,6 @@ dependencies {
     compile libraries.springsecurity
     compile libraries.persondirectory
     compile libraries.ldaptive
+
+    compileOnly project(":cas-server-core-api-authentication")
 }
