Radius attribute NAS-Identifier should be a string. Back ported From master.

--- a/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
+++ b/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
@@ -637,7 +637,7 @@ accept.authn.users=casuser::Mellon
 # cas.radius.client.sharedsecret=N0Sh@ar3d$ecReT
 # cas.radius.server.protocol=EAP_MSCHAPv2
 # cas.radius.server.retries=3
-# cas.radius.server.nasIdentifier=-1
+# cas.radius.server.nasIdentifier=
 # cas.radius.server.nasPort=-1
 # cas.radius.server.nasPortId=-1
 # cas.radius.server.nasRealPort=-1
