Working on additional pac4j clients

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -96,5 +96,20 @@ cas.authn.attributeRepository.attributes.cn=commonName
 cas.authn.attributeRepository.attributes.affiliation=groupMembership
 
 
+cas.authn.pac4j.google.id=something
+cas.authn.pac4j.google.secret=1234565
 
+cas.authn.pac4j.dropbox.id=something
+cas.authn.pac4j.dropbox.secret=1234565
 
+cas.authn.pac4j.windowsLive.id=something
+cas.authn.pac4j.windowsLive.secret=1234565
+
+cas.authn.pac4j.github.id=something
+cas.authn.pac4j.github.secret=1234565
+
+cas.authn.pac4j.yahoo.id=something
+cas.authn.pac4j.yahoo.secret=1234565
+
+cas.authn.pac4j.foursquare.id=something
+cas.authn.pac4j.foursquare.secret=1234565
