--- a/cas-server-support-x509/src/test/resources/ldap.properties
+++ b/cas-server-support-x509/src/test/resources/ldap.properties
@@ -11,7 +11,7 @@ ldap.rootDn=dc=example,dc=org
 ldap.baseDn=ou=people,dc=example,dc=org
 
 # LDAP connection timeout in milliseconds
-ldap.connectTimeout=3000
+ldap.connectTimeout=PT3000S
 
 # Manager credential DN
 ldap.managerDn=cn=Directory Manager,dc=example,dc=org
@@ -29,18 +29,18 @@ ldap.pool.validatePeriodically=true
 
 # Amount of time in milliseconds to block on pool exhausted condition
 # before giving up.
-ldap.pool.blockWaitTime=3000
+ldap.pool.blockWaitTime=PT3000S
 
 # Frequency of connection validation in seconds
 # Only applies if validatePeriodically=true
-ldap.pool.validatePeriod=300
+ldap.pool.validatePeriod=PT3000S
 
 # Attempt to prune connections every N seconds
-ldap.pool.prunePeriod=300
+ldap.pool.prunePeriod=PT3000S
 
 # Maximum amount of time an idle connection is allowed to be in
 # pool before it is liable to be removed/destroyed
-ldap.pool.idleTime=600
+ldap.pool.idleTime=PT3000S
 
 ldap.searchfilter.cert=CN=x509
 
