--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ mockitoVersion=1.10.19
 findbugsVersion=3.0.1
 findbugsContribVersion=6.6.1
 findbugsSecVersion=1.4.6
-checkstyleVersion=6.19
+checkstyleVersion=7.0
 
 javaxServletVersion=3.1.0
 javaxElVersion=3.0.0
@@ -86,12 +86,12 @@ dropwizardMetricsSpringVersion=3.1.3
 jacksonDatabindVersion=2.7.4
 jsonVersion=20160212
 hjsonVersion=1.1.4
-personDirectoryVersion=1.8.1
+personDirectoryVersion=1.8.2-SNAPSHOT
 quartzVersion=2.2.3
 
 yubicoVersion=3.0.1
 duoVersion=1.1
-googleAuthVersion=0.6.0
+googleAuthVersion=1.1.1
 googleZxingVersion=3.2.1
 maxmindVersion=2.7.0
 
@@ -111,8 +111,8 @@ hazelcastVersion=3.6.3
 
 memcachedEmbeddedVersion=1.06.4
 spymemcachedVersion=2.12.1
-kryoVersion=3.0.3
-kryoSerializersVersion=0.37
+kryoVersion=4.0.0
+kryoSerializersVersion=0.38
 
 ehcacheVersion=2.10.2.2.21
 jcacheVersion=1.0.1
@@ -134,11 +134,11 @@ jdomVersion=1.0
 
 cryptacularVersion=1.0
 
-grouperVersion=2.2.2
+grouperVersion=2.3.0
 
 jsonassertVersion=1.3.0
 
-couchbaseVersion=2.2.7
+couchbaseVersion=2.3.1
 
 igniteVersion=1.6.0
 infinispanVersion=8.2.2.Final
