--- a/build.gradle
+++ b/build.gradle
@@ -224,7 +224,7 @@ def projectMavenDeployer = {
 
             repository {
                 id "ldaptive"
-                url "https://github.com/vt-middleware/maven-repo"
+                url "https://raw.github.com/vt-middleware/maven-repo/master"
                 releases {
                     enabled true
                 }
@@ -252,7 +252,7 @@ buildscript {
         maven { url "https://maven.eveoh.nl/content/repositories/releases" }
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "http://repo.spring.io/plugins-release" }
-        maven { url "https://github.com/vt-middleware/maven-repo" }
+        maven { url "https://raw.github.com/vt-middleware/maven-repo/master" }
     }
 
     dependencies {
