--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -1,9 +1,4 @@
 ##
-# Configuration Profile
-#
-spring.profiles.active=default
-
-##
 # CAS Thymeleaf Views
 #
 spring.thymeleaf.cache=false
@@ -29,15 +24,15 @@ server.context-parameters.isLog4jAutoInitializationDisabled=true
 cas.server.name=https://jasigcas.herokuapp.com
 cas.server.prefix=${cas.server.name}/cas
 
-cas.mgmt.serverName=https://mmoayyed.unicon.net:8443
+cas.mgmt.serverName=https://cas.example.org:8443
 
 ##
 # CAS Authentication Attributes
 #
-cas.authn.attributes.uid=uid
-cas.authn.attributes.displayName=displayName
-cas.authn.attributes.cn=cn
-cas.authn.attributes.affiliation=affiliation
+cas.authn.attributeRepository.attributes.uid=uid
+cas.authn.attributeRepository.attributes.displayName=displayName
+cas.authn.attributeRepository.attributes.cn=commonName
+cas.authn.attributeRepository.attributes.affiliation=groupMembership
 
 ##
 # CAS Web Application Config
