Updated bean mapping

--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -33,7 +33,9 @@ cas.authn.attributeRepository.attributes.uid=uid
 cas.authn.attributeRepository.attributes.displayName=displayName
 cas.authn.attributeRepository.attributes.cn=commonName
 cas.authn.attributeRepository.attributes.affiliation=groupMembership
-
+cas.authn.attributeRepository.attributes.lastName=lastName
+cas.authn.attributeRepository.attributes.firstName=firstName
+cas.authn.attributeRepository.attributes.givenName=givenName
 ##
 # CAS Web Application Config
 #
