Bootify mgmt webapp; add support for missing service fields.  (#1900)
* Allow management app to run via boot with config externalized

* Updated bean mapping

* Updated bean mapping

* Working on mgmt app new edit screen

* Added oidc clients

* UI polish

* Updated mgmt app

* Fixed javadoc

--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -1,9 +1,4 @@
 ##
-# Configuration Profile
-#
-spring.profiles.active=default
-
-##
 # CAS Thymeleaf Views
 #
 spring.thymeleaf.cache=false
@@ -29,16 +24,18 @@ server.context-parameters.isLog4jAutoInitializationDisabled=true
 cas.server.name=https://jasigcas.herokuapp.com
 cas.server.prefix=${cas.server.name}/cas
 
-cas.mgmt.serverName=https://mmoayyed.unicon.net:8443
+cas.mgmt.serverName=https://cas.example.org:8443
 
 ##
 # CAS Authentication Attributes
 #
-cas.authn.attributes.uid=uid
-cas.authn.attributes.displayName=displayName
-cas.authn.attributes.cn=cn
-cas.authn.attributes.affiliation=affiliation
-
+cas.authn.attributeRepository.attributes.uid=uid
+cas.authn.attributeRepository.attributes.displayName=displayName
+cas.authn.attributeRepository.attributes.cn=commonName
+cas.authn.attributeRepository.attributes.affiliation=groupMembership
+cas.authn.attributeRepository.attributes.lastName=lastName
+cas.authn.attributeRepository.attributes.firstName=firstName
+cas.authn.attributeRepository.attributes.givenName=givenName
 ##
 # CAS Web Application Config
 #
