--- a/cas-server-support-pac4j-authentication/build.gradle
+++ b/cas-server-support-pac4j-authentication/build.gradle
@@ -2,6 +2,7 @@ description = "Apereo CAS Authentication handler wrapping pac4j"
 dependencies {
 
     compile project(":cas-server-core-authentication")
+    compile project(":cas-server-core-web")
     compile project(":cas-server-support-pac4j-core")
     compile libraries.pac4j
 }
