--- a/gradle.properties
+++ b/gradle.properties
@@ -64,7 +64,7 @@ thymeleafDialectVersion=1.3.3
 casClientVersion=3.4.1
 casSecurityFilterVersion=2.0.6
 
-fongoVersion=2.0.2
+fongoVersion=2.0.7
 mongoDriverVersion=3.1.1
 jtaVersion=1.1
 
@@ -80,7 +80,7 @@ guavaVersion=19.0
 groovyVersion=2.4.7
 
 springWebmvcPac4jVersion=1.1.0
-pac4jVersion=1.9.0
+pac4jVersion=1.9.1-SNAPSHOT
 dropwizardMetricsVersion=3.1.2
 dropwizardMetricsSpringVersion=3.1.3
 jacksonDatabindVersion=2.7.4
