--- a/gradle.properties
+++ b/gradle.properties
@@ -43,7 +43,7 @@ springWebflowVersion=2.4.2.RELEASE
 springDataCommonsVersion=1.11.4.RELEASE
 springDataMongoDbVersion=1.8.4.RELEASE
 springSecurityVersion=4.0.4.RELEASE
-springSessionVersion=1.2.0.RELEASE
+springSessionVersion=1.2.1.RELEASE
 
 springCloudConfigVersion=1.1.2.RELEASE
 springCloudStarterVersion=1.1.1.RELEASE
@@ -51,8 +51,8 @@ springCloudContextVersion=1.1.1.RELEASE
 
 springCloudBusAmqStarterVersion=1.1.0.RELEASE
 
-springBootVersion=1.3.6.RELEASE
-springBootTomcatVersion=8.0.36
+springBootVersion=1.4.0.RC1
+springBootTomcatVersion=8.5.4
 
 hibernateVersion=5.1.0.Final
 hibernateValidatorVersion=5.2.4.Final
@@ -83,7 +83,7 @@ springWebmvcPac4jVersion=1.1.0
 pac4jVersion=1.9.1-SNAPSHOT
 dropwizardMetricsVersion=3.1.2
 dropwizardMetricsSpringVersion=3.1.3
-jacksonDatabindVersion=2.7.4
+jacksonDatabindVersion=2.8.0
 jsonVersion=20160212
 hjsonVersion=1.1.4
 personDirectoryVersion=1.8.1
@@ -107,7 +107,7 @@ jradiusVersion=jradius-1.1.5
 
 httpclientVersion=4.5.2
 
-hazelcastVersion=3.6.3
+hazelcastVersion=3.6.4
 
 memcachedEmbeddedVersion=1.06.4
 spymemcachedVersion=2.12.1
