--- a/build.gradle
+++ b/build.gradle
@@ -277,6 +277,13 @@ allprojects {
         sign configurations.archives
     }
 
+    idea {
+        module {
+            downloadSources = false
+            downloadJavadoc = false
+        }
+    }
+    
     signArchives.enabled = rootProject.publishReleases || rootProject.publishSnapshots
 
     /*
@@ -287,8 +294,8 @@ allprojects {
 }
 
 subprojects {
-    task allDepInsight(type: DependencyInsightReportTask) << {}
-    task allDeps(type: DependencyReportTask) {}
+    task allDependenciesInsight(type: DependencyInsightReportTask, description: "Produce insight information for all dependencies") << {}
+    task allDependencies(type: DependencyReportTask, description: "Display a graph of all project dependencies") {}
 
     apply plugin: "java"
     apply plugin: "checkstyle"
