--- a/cas-management-webapp/build.gradle
+++ b/cas-management-webapp/build.gradle
@@ -35,6 +35,7 @@ war {
 dependencies {
     compile libraries.springboot
     runtime project(":cas-management-webapp-support")
+    runtime project(":cas-server-support-json-service-registry")
     providedRuntime libraries.springboottomcat
     runtime libraries.hibernate
     runtime libraries.groovy
