--- a/cas-server-support-oauth-core/build.gradle
+++ b/cas-server-support-oauth-core/build.gradle
@@ -3,7 +3,7 @@ dependencies {
 
     compile project(":cas-server-core-services")
     compile project(":cas-server-core-web")
-    compile project(":cas-server-core-tickets")
+    compileOnly project(":cas-server-core-tickets")
     compile libraries.pac4j
     compile libraries.jackson
     runtime libraries.hibernate
