Added support for encrypted assertions. Updated docs

--- a/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
+++ b/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
@@ -510,6 +510,11 @@ accept.authn.users=casuser::Mellon
 # Decides which bundle of attributes should be resolved during WS-FED authentication.
 # cas.wsfed.idp.attribute.resolver.enabled=true
 # cas.wsfed.idp.attribute.resolver.type=WSFED
+# 
+# Private/Public keypair used to decrypt assertions, if any.
+# cas.wsfed.idp.enc.privateKey=classpath:private.key
+# cas.wsfed.idp.enc.cert=classpath:certificate.crt
+# cas.wsfed.idp.enc.privateKeyPassword=NONE
 
 ##
 # LDAP User Details
