--- a/build.gradle
+++ b/build.gradle
@@ -188,8 +188,15 @@ def projectMavenDeployer = {
             }
             repository {
                 id "spring-milestones"
-                url "http://repo.spring.io/milestone"
+                url "https://repo.spring.io/milestone"
                 releases {
+                    enabled true
+                }
+            }
+            repository {
+                id "spring-snapshots"
+                url "https://repo.spring.io/snapshot"
+                snapshots {
                     enabled true
                 }
             }
@@ -241,6 +248,8 @@ buildscript {
         maven { url "https://maven.eveoh.nl/content/repositories/releases" }
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "http://repo.spring.io/plugins-release" }
+        maven { url "https://repo.spring.io/milestone" }
+        maven { url "https://repo.spring.io/snapshot" }
     }
 
     dependencies {
@@ -268,6 +277,13 @@ allprojects {
         sign configurations.archives
     }
 
+    idea {
+        module {
+            downloadSources = false
+            downloadJavadoc = false
+        }
+    }
+    
     signArchives.enabled = rootProject.publishReleases || rootProject.publishSnapshots
 
     /*
@@ -278,8 +294,8 @@ allprojects {
 }
 
 subprojects {
-    task allDepInsight(type: DependencyInsightReportTask) << {}
-    task allDeps(type: DependencyReportTask) {}
+    task allDependenciesInsight(type: DependencyInsightReportTask, description: "Produce insight information for all dependencies") << {}
+    task allDependencies(type: DependencyReportTask, description: "Display a graph of all project dependencies") {}
 
     apply plugin: "java"
     apply plugin: "checkstyle"
@@ -307,7 +323,8 @@ subprojects {
         maven { url "http://developer.jasig.org/repo/content/groups/m2-legacy/" }
         maven { url "https://build.shibboleth.net/nexus/content/repositories/releases" }
         maven { url "http://files.couchbase.com/maven2" }
-        maven { url "http://repo.spring.io/milestone" }
+        maven { url "https://repo.spring.io/milestone" }
+        maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://dl.bintray.com/uniconiam/maven" }
     }
 
