--- a/cas-server-support-oauth/build.gradle
+++ b/cas-server-support-oauth/build.gradle
@@ -2,6 +2,7 @@ description = "Apereo CAS Server OAuth Provider Support"
 dependencies {
     compileOnly libraries.springcloud
     compile project(":cas-server-support-oauth-core")
+    compileOnly project(":cas-server-core-tickets")
     testCompile project(":cas-server-core-util")
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
     testCompile project(":cas-server-core-logout")
