--- a/gradle.properties
+++ b/gradle.properties
@@ -40,10 +40,10 @@ springVersion=4.3.1.RELEASE
 springIntegrationVersion=4.2.8.RELEASE
 springWebflowClientVersion=1.0.3
 springWebflowVersion=2.4.4.RELEASE
-springDataCommonsVersion=1.11.4.RELEASE
-springDataMongoDbVersion=1.8.4.RELEASE
-springSecurityVersion=4.0.4.RELEASE
-springSessionVersion=1.2.0.RELEASE
+springDataCommonsVersion=1.12.2.RELEASE
+springDataMongoDbVersion=1.9.2.RELEASE
+springSecurityVersion=4.1.1.RELEASE
+springSessionVersion=1.2.1.RELEASE
 
 springCloudConfigVersion=1.1.2.RELEASE
 springCloudStarterVersion=1.1.1.RELEASE
@@ -51,8 +51,8 @@ springCloudContextVersion=1.1.1.RELEASE
 
 springCloudBusAmqStarterVersion=1.1.0.RELEASE
 
-springBootVersion=1.3.6.RELEASE
-springBootTomcatVersion=8.0.36
+springBootVersion=1.4.0.RC1
+springBootTomcatVersion=8.5.4
 
 hibernateVersion=5.1.0.Final
 hibernateValidatorVersion=5.2.4.Final
@@ -64,8 +64,8 @@ thymeleafDialectVersion=1.3.3
 casClientVersion=3.4.1
 casSecurityFilterVersion=2.0.6
 
-fongoVersion=2.0.2
-mongoDriverVersion=3.1.1
+fongoVersion=2.0.7
+mongoDriverVersion=3.3.0
 jtaVersion=1.1
 
 commonsLangVersion=3.4
@@ -79,11 +79,11 @@ reflectionsVersion=0.9.10
 guavaVersion=19.0
 groovyVersion=2.4.7
 
-springWebmvcPac4jVersion=1.0.2
-pac4jVersion=1.8.8
+springWebmvcPac4jVersion=1.1.1
+pac4jVersion=1.9.1
 dropwizardMetricsVersion=3.1.2
 dropwizardMetricsSpringVersion=3.1.3
-jacksonDatabindVersion=2.7.4
+jacksonDatabindVersion=2.8.0
 jsonVersion=20160212
 hjsonVersion=1.1.4
 personDirectoryVersion=1.8.1
@@ -107,7 +107,7 @@ jradiusVersion=jradius-1.1.5
 
 httpclientVersion=4.5.2
 
-hazelcastVersion=3.6.3
+hazelcastVersion=3.6.4
 
 memcachedEmbeddedVersion=1.06.4
 spymemcachedVersion=2.12.1
