Upgrade to ldaptive 1.2 (#1510)
* upgrade to ldaptive 1.2

* updated spnego and x509 context

* add FreeIPA errors

* Merge branch 'master' into ldaptive1.2

# Conflicts:
#	cas-server-core-audit/src/main/resources/inspektr-jdbc-audit-config.xml
#	cas-server-support-jpa-ticket-registry/src/test/resources/jpaSpringContext.xml
#	cas-server-support-ldap/src/main/java/org/jasig/cas/authentication/support/DefaultAccountStateHandler.java
#	cas-server-support-spnego/src/test/resources/ldap-context.xml
#	cas-server-webapp/src/main/webapp/WEB-INF/deployerConfigContext.xml
#	gradle.properties

* Merge branch 'master' into ldaptive1.2

* fixed test cases

* add freeipa error code support

* Merge branch 'master' into ldaptive1.2

# Conflicts:
#	build.gradle
#	cas-server-documentation/installation/LDAP-Authentication.md
#	cas-server-support-jdbc/src/test/resources/jpaSpringContext.xml
#	cas-server-support-jpa-service-registry/src/main/resources/META-INF/spring/jpa-svc-reg-context.xml
#	cas-server-support-jpa-service-registry/src/test/resources/jpaSpringContext.xml
#	cas-server-support-jpa-service-registry/src/test/resources/jpaTestApplicationContext.xml
#	cas-server-support-jpa-ticket-registry/src/main/resources/META-INF/spring/jpa-ticket-reg-context.xml
#	cas-server-support-jpa-ticket-registry/src/test/resources/jpaTestApplicationContext.xml
#	cas-server-support-jpa-ticket-registry/src/test/resources/jpaTicketRegistryContext.xml
#	cas-server-support-ldap-core/src/main/java/org/apereo/cas/authentication/support/DefaultAccountStateHandler.java
#	cas-server-support-ldap/src/test/resources/ldap-context.xml
#	cas-server-support-throttle-jdbc/src/test/resources/jdbc-audit-context.xml
#	cas-server-support-x509/src/test/resources/x509-ldap-context.xml

* Ldaptive 1.2 upgrade

* Fixed check style issues

* Updated repo instance

* Updated docs

* Merge branch 'master' into ldaptive1.2

# Conflicts:
#	cas-server-support-gauth/src/main/jav

--- a/build.gradle
+++ b/build.gradle
@@ -228,6 +228,17 @@ def projectMavenDeployer = {
                     enabled true
                 }
             }
+
+            repository {
+                id "ldaptive"
+                url "https://raw.github.com/vt-middleware/maven-repo/master"
+                releases {
+                    enabled true
+                }
+                snapshots {
+                    enabled true
+                }
+            }
         }
     }
 }
@@ -317,6 +328,7 @@ subprojects {
         mavenCentral()
         jcenter()
 
+        maven { url "https://raw.github.com/vt-middleware/maven-repo/master" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
         maven { url "http://repo.maven.apache.org/maven2" }
         maven { url "https://jitpack.io" }
