LDAP improvement & bug fix (#1890)
* Fix for 'Pool has not been initialized' error

* Add possibility for custom userPassword LDAP-Attribute

* Compare custom LDAP-Attribute, when using authenticated or anon search authenticator

* Initialize LdapAuthenticationHandler manually, as the class is no managed bean anymore

* Fix codacy indentation level issues

* fix more codacy issues

* All checkstyle issued solved

* Fixed test, which is still using managed beans

* fallback to the pooledBindAuthnHandler if no principal password attribute is defined

* Merge ldaptive 1.2.0 pull request

* Fixed documentation

--- a/cas-server-support-ldap/src/test/resources/ldap.properties
+++ b/cas-server-support-ldap/src/test/resources/ldap.properties
@@ -48,6 +48,7 @@ ldap.pool.idleTime=PT600S
 # Authentication
 #========================================
 ldap.authn.searchFilter=cn={user}
+ldap.authn.passwordAttribute=userPassword
 
 # Ldap domain used to resolve dn
 ldap.domain=example.org
