switch to next development version

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ gradleVersion=2.14
 sourceCompatibility=1.8
 targetCompatibility=1.8
 group=org.apereo.cas
-version=5.0.0.M3
+version=5.0.0.RC1-SNAPSHOT
 
 aspectjVersion=1.8.9
 junitVersion=4.12
